--- a/src/Gallery.css
+++ b/src/Gallery.css
@@ -1,31 +1,48 @@
 .gallery-container {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
   width: 100vw;
+  height: 75%;
   padding: 20px;
   box-sizing: border-box;
   overflow: scroll;
 }
 .gallery {
+  overflow-x: hidden;
+  width: 60vw;
+  height: 100%;
+}
+.gallery-reel {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  transition: 200ms ease;
-  overflow-x: scroll;
-  width: 80vw;
-}
-.image-container {
-  width: 80vw;
+  transition: 250ms ease-in-out;
+  width: 60vw;
+  height: 100%;
 }
 .image-container:not(:last-child) {
-  padding-right: 20px;
+  padding-right: 1vw;
+}
+.image-container {
+  position: relative;
+  width: 60vw;
 }
 .image-container img {
-  width: 80vw;
+  width: 60vw;
   object-fit: cover;
+}
+.caption {
+  position: absolute;
+  width: 100%;
+  top: 80%;
+  text-align: center;
+  color: white;
+  font-size: 2.5vw;
+  text-transform: uppercase;
+  text-shadow: 0px 2px 8px black;
 }
 .left-btn, .right-btn {
   width: 8vw;
