--- a/src/Gallery.css
+++ b/src/Gallery.css
@@ -19,7 +19,7 @@
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  transition: 250ms ease-in-out;
+  transition: 2500ms ease-in-out;
   width: 60vw;
   height: 100%;
 }
@@ -53,6 +53,7 @@
 }
 .left-btn:hover, .right-btn:hover {
   cursor: pointer;
+  opacity: 0.7;
 }
 .left-btn img, .right-btn img {
   width: 8vw;
