--- a/src/App.css
+++ b/src/App.css
@@ -6,16 +6,32 @@
   animation: App-logo-spin infinite 20s linear;
   height: 80px;
 }
-.App-header {
+.header {
   background-color: #eee;
   padding: 30px;
   color: #888;
+  font-size: 1.2rem;
 }
-.App-title {
+.title, .footer-container {
   font-size: 2rem;
   letter-spacing: 1px;
   text-transform: uppercase;
 }
-.App-intro {
-  font-size: large;
+.footer-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+.footer {
+  padding-top: 20px;
+  font-size: 0.8rem;
+  color: #888;
+}
+.footer:hover {
+  cursor: pointer;
+  color: #333;
+}
+.footer span {
+  font-size: 1.5rem;
+  font-weight: 800;
 }
