--- a/src/Gallery.css
+++ b/src/Gallery.css
@@ -43,6 +43,16 @@
   text-transform: uppercase;
   text-shadow: 0px 2px 8px black;
 }
+.link a {
+  font-size: 1rem;
+  letter-spacing: 1px;
+  color: #ccc;
+  text-decoration: none;
+}
+.link a:hover {
+  cursor: pointer;
+  color: #888;
+}
 .left-btn, .right-btn {
   width: 8vw;
   height: 8vw;
